# OpenCV-Unity

./: .gitignore  README.md
CompleteProjects/ARMarkers/: .gitignore  README.md
CompleteProjects/ARMarkers/Test/SolvePnP_test/: CMakeLists.txt  main.cpp
CompleteProjects/ARMarkers/Unity/: ARMarkers-csharp.sln  ARMarkers.sln  Assembly-CSharp-vs.csproj  Assembly-CSharp.csproj  Unity.userprefs
CompleteProjects/ARMarkers/Unity/Assets/PaperPlaneTools/ARMarker/Demo/: MainScene.unity
CompleteProjects/ARMarkers/Unity/Assets/PaperPlaneTools/ARMarker/Demo/Models/char_1/Materials/: Steve_skin.mat
CompleteProjects/ARMarkers/Unity/Assets/PaperPlaneTools/ARMarker/Demo/Models/char_2/: char.fbx
CompleteProjects/ARMarkers/Unity/Assets/PaperPlaneTools/ARMarker/Demo/Resources/: char_1.prefab  char_2.prefab
CompleteProjects/ARMarkers/Unity/Assets/PaperPlaneTools/ARMarker/Documentation/: Readme.txt
CompleteProjects/ARMarkers/Unity/Assets/PaperPlaneTools/ARMarker/Scripts/: MainScript.cs  MarkerDetector.cs  MatrixHelper.cs  SceneScaler.cs  WebCamera.cs
CompleteProjects/ARMarkers/Unity/ProjectSettings/: EditorSettings.asset  ProjectSettings.asset
Unity/OpenCV+Unity.Desktop/: .gitignore
Unity/OpenCV+Unity.Desktop/ProjectSettings/: EditorBuildSettings.asset
Unity/OpenCV+Unity/ProjectSettings/: ProjectSettings.asset
Utils/: build-all-platforms.sh  build-everything.sh  make-binary-symlinks.sh  prepare-unity-projects.sh
Utils/Versions/: 1.0.txt
Utils/scripts/: build-library.sh  build-plugin.sh
Utils/toolchains/: Info.plist  toolchain.ios.cmake  toolchain.macos.cmake
php/www/: r.php
source/sharpextern-1.1/: CMakeLists.txt  aruco.h  calib3d.h  core.h  core_InputArray.h  dlib.cpp  dlib.h  face_FaceRecognizer.h  imgproc.h  include_opencv.h  ml.cpp  objdetect.h  std_vector.h  text.h  ucm.cmake  utils.cpp  utils.h  xphoto.cpp  xphoto.h
source/unity/demo-scenes/Document_Scanner/: DocumentScannerLobby.unity  DocumentScannerScene.unity
source/unity/demo-scenes/Face_Detector/: FaceDetectorScene.unity
source/unity/demo-scenes/Face_Recognizer/: FaceRecognizer.unity
source/unity/demo-scenes/Grayscale/: GrayscaleScene.unity
source/unity/demo-scenes/LiveSketch_WebCam/: LiveSketchScene.unity
source/unity/demo-scenes/Lobby/: LobbyScene.unity
source/unity/demo-scenes/Marker_Detector/: MarkerDetectorScene.unity
source/unity/demo-scenes/OCR.Alphabet/: AlphabetOCR.unity
source/unity/demo-scenes/Tracking/: TrackingScene.unity
source/unity/opencv-sharp/OpenCvSharp/modules/aruco/: CvAruco.cs
source/unity/trial/Editor/Scripts/: WelcomeWindow.cs
(+1 files in other folders)
